force-app/main/default/objects/Charket__Form__c/Charket__Form__c.object-meta.xml
<CustomObject>
    <label>Form</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>