force-app/main/default/objects/Charket__Form__c/fields/Charket__Banner__c.field-meta.xml
<CustomField>
    <fullName>Charket__Banner__c</fullName>
    <label>Banner</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>