force-app/main/default/objects/Charket__Form__c/fields/Charket__IsPardotIntegrationEnabled__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsPardotIntegrationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pardot Integration Enabled</label>
    <type>Checkbox</type>
</CustomField>