force-app/main/default/objects/Charket__Form__c/fields/Charket__IsPrefillEnabled__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsPrefillEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-fill</label>
    <type>Checkbox</type>
</CustomField>