force-app/main/default/objects/Charket__Form__c/fields/Charket__IsWeChatAuthenticationEnabled__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsWeChatAuthenticationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WeChat Authentication Enabled</label>
    <type>Checkbox</type>
</CustomField>