force-app/main/default/objects/Charket__Form__c/fields/Charket__RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Charket__RecordTypeId__c</fullName>
    <label>Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>