force-app/main/default/objects/Charket__Form__c/fields/Charket__ShortUrl__c.field-meta.xml
<CustomField>
    <fullName>Charket__ShortUrl__c</fullName>
    <label>Short URL</label>
    <type>Url</type>
</CustomField>