force-app/main/default/objects/Charket__Form__c/listViews/Charket__All.listView-meta.xml
<ListView>
    <fullName>Charket__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>